k8s/envs/ms-a.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: microservice-a
  labels:
    app: microservice-a
spec:
  replicas: 2
  selector:
    matchLabels:
      app: microservice-a
  template:
    metadata:
      labels:
        app: microservice-a
    spec:
      imagePullSecrets:
        - name: ghcr-secret
      containers:
        - name: microservice-a
          image: ghcr.io/cdesplanches-orka/microservice-a/ms-a:latest
          ports:
            - name: http
              containerPort: 3000
            - name: grpc
              containerPort: 50051
          readinessProbe:
            httpGet:
              path: /health
              port: 3000
            initialDelaySeconds: 5
            periodSeconds: 5
          livenessProbe:
            httpGet:
              path: /health
              port: 3000
            initialDelaySeconds: 10
            periodSeconds: 10
---
apiVersion: v1
kind: Service
metadata:
  name: microservice-a
spec:
  selector:
    app: microservice-a
  ports:
    - name: http
      port: 80
      targetPort: 3000
    - name: grpc
      port: 50051
      targetPort: 50051
  type: ClusterIP
