k8s/envs/ms-b.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: microservice-b
  labels:
    app: microservice-b
spec:
  replicas: 2
  selector:
    matchLabels:
      app: microservice-b
  template:
    metadata:
      labels:
        app: microservice-b
    spec:
      imagePullSecrets:
        - name: ghcr-secret
      containers:
        - name: microservice-b
          image: ghcr.io/cdesplanches-orka/microservice-b/ms-b:latest
          ports:
            - containerPort: 3001
          readinessProbe:
            httpGet:
              path: /health
              port: 3001
            initialDelaySeconds: 5
            periodSeconds: 5
          livenessProbe:
            httpGet:
              path: /health
              port: 3001
            initialDelaySeconds: 10
            periodSeconds: 10
---
apiVersion: v1
kind: Service
metadata:
  name: microservice-b
spec:
  selector:
    app: microservice-b
  ports:
    - name: http
      port: 80
      targetPort: 3001
  type: LoadBalancer
